# eson

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  build.md  debugging.md  development.md  package.json
apps/desktop/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.svelte  app.css  main.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: DATA_LIFECYCLE.md  DEBUG_BUNDLE.md  INTERACTION_ROADMAP.md  MACOS_RELEASE.md
persona/: Eson.md  IDENTITY.md  SOUL.md
scripts/: build-installer.sh  dev.sh
services/agent/: Cargo.toml
services/agent/src/: agent_loop.rs  agent_memory.rs  consolidation.rs  embedder.rs  learnings.rs  lib.rs  llm.rs  main.rs  memory_client.rs  os_plane.rs  persona.rs  policy.rs  scan.rs  skills.rs  vision.rs  workspace.rs  workspace_tools.rs
services/agent/tests/: workspace_boundary.rs
services/memory/: Cargo.toml
services/memory/src/: main.rs
skills/: README.md
skills/cron/: after-action.md  consolidate-memory.md  daily-summary.md  memory-12h-consolidation.md
skills/inbox/: csv.md  image.md  pdf.md  xlsx.md
