[package]
name = "eson-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "eson-agent"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "stream"] }
dotenvy = "0.15"
socketioxide = "0.16"
dashmap = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "6"
base64 = "0.22"
csv = "1.3"
rust_xlsxwriter = "0.79"
tempfile = "3"
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
calamine = "0.34.0"

[target.'cfg(target_os = "macos")'.dependencies]
sysinfo = "0.32"
