[package]
name = "eson-desktop"
version = "0.1.0"
description = "Eson desktop shell (Tauri)"
authors = ["Eson"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-http = { version = "2.5.8", features = ["unsafe-headers"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
